# xpp

robots/xpp_hyq/launch/: monoped.launch
robots/xpp_laikago/: CMakeLists.txt  package.xml
robots/xpp_laikago/include/xpp_laikago/: inverse_kinematics_laikago4.h  laikagoleg_inverse_kinematics.h
robots/xpp_laikago/launch/: laikago.launch
robots/xpp_laikago/src/: inverse_kinematics_laikago4.cc  laikagoleg_inverse_kinematics.cc
robots/xpp_laikago/src/exe/: urdf_visualizer_laikago.cc
robots/xpp_laikago/urdf/: laikago.urdf
xpp_examples/: package.xml
xpp_examples/launch/: laikago_generate.launch  monoped_generate.launch
xpp_examples/rviz/: xpp_laikago.rviz
xpp_examples/src/: laikago_pub.cc
